--- a/mriprotocol/index.html
+++ b/mriprotocol/index.html
@@ -7,7 +7,7 @@
     <style>
         /* ----- Basic Layout Styles ----- */
         html {
-            scroll-behavior: smooth; /* Tạo hiệu ứng cuộn mượt khi nhấp vào link */
+            scroll-behavior: smooth;
         }
 
         body {
@@ -15,20 +15,20 @@
             font-family: sans-serif;
             line-height: 1.6;
             margin: 0;
-            background-color: #f0f8ff; /* Light Alice Blue background */
+            background-color: #f0f8ff;
             color: #333;
         }
 
         nav.sidebar {
-            width: 220px; /* Độ rộng thanh điều hướng */
-            background-color: #e6f7ff; /* Màu nền thanh điều hướng */
+            width: 220px;
+            background-color: #e6f7ff;
             border-right: 1px solid #b3e0ff;
             padding: 20px 15px;
-            height: 100vh; /* Chiều cao bằng màn hình */
-            position: fixed; /* Cố định khi cuộn */
+            height: 100vh;
+            position: fixed;
             top: 0;
             left: 0;
-            overflow-y: auto; /* Cho phép cuộn nếu nội dung nav dài */
+            overflow-y: auto;
             z-index: 1000;
         }
 
@@ -39,176 +39,137 @@
             padding-bottom: 10px;
         }
 
-        nav.sidebar ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        nav.sidebar ul li {
-            margin-bottom: 5px;
-        }
-
-        nav.sidebar ul li a {
-            text-decoration: none;
-            color: #0056b3;
-            display: block;
-            padding: 8px 10px;
-            border-radius: 4px;
-            transition: background-color 0.2s ease;
-        }
-
-        nav.sidebar ul li a:hover,
-        nav.sidebar ul li a.active { /* Thêm class active nếu muốn highlight mục đang xem */
-            background-color: #cceaff;
-            font-weight: bold;
-        }
-
-         /* Sub-menu styling */
-        nav.sidebar ul ul {
-            margin-left: 15px; /* Thụt vào cho menu con */
-            margin-top: 5px;
-            border-left: 2px solid #add8e6; /* Đường kẻ phân cấp */
-            padding-left: 10px;
-        }
-         nav.sidebar ul ul li a {
-             font-size: 0.9em; /* Cỡ chữ nhỏ hơn cho mục con */
-             padding: 5px 10px;
-         }
-
+        nav.sidebar ul { list-style: none; padding: 0; margin: 0; }
+        nav.sidebar ul li { margin-bottom: 5px; }
+        nav.sidebar ul li a { text-decoration: none; color: #0056b3; display: block; padding: 8px 10px; border-radius: 4px; transition: background-color 0.2s ease; }
+        nav.sidebar ul li a:hover, nav.sidebar ul li a.active { background-color: #cceaff; font-weight: bold; }
+        nav.sidebar ul ul { margin-left: 15px; margin-top: 5px; border-left: 2px solid #add8e6; padding-left: 10px; }
+        nav.sidebar ul ul li a { font-size: 0.9em; padding: 5px 10px; }
 
         main.content {
             margin-left: 250px; /* Phải lớn hơn độ rộng thanh nav + padding */
-            padding: 20px 30px;
+            /* Điều chỉnh padding để header có thể chạm lề */
+            padding: 20px 0 20px 0; /* Top 0, LR 0, Bottom 20px */
             width: calc(100% - 250px); /* Chiếm phần còn lại */
         }
 
- /* ----- Header Section Styles ----- */
+
+        /* ----- Header Section Styles (ADDED/CORRECTED) ----- */
         .page-header {
             background-color: #004a9e; /* Dark blue like image */
             color: white;
-            padding: 30px 30px; /* Adjusted padding */
+            padding: 30px 30px; /* Padding inside the header */
             text-align: center;
-            margin-bottom: 30px;
-            /* Removed negative margins, handled by main padding */
+            margin-bottom: 30px; /* Space below the header */
+            /* Kéo ra lề của main.content */
+             margin-left: -30px; /* Bù lại padding của main.content cũ */
+             margin-right: -30px;/* Bù lại padding của main.content cũ */
+             margin-top: -20px;  /* Kéo lên trên cùng của main.content */
         }
 
-        /* ----- CSS mới cho .page-header h2 (thay thế) ----- */
-.page-header h2 {
-    margin: 0 0 10px 0;
-    font-size: 1.8em;
-    /* font-weight: bold; */ /* Thay thế dòng này */
-    font-weight: 600;      /* Bằng dòng này (semi-bold) */
-    text-transform: uppercase;
-    color: white;
-    border-bottom: none;
-    text-shadow: none; /* Đảm bảo không có đổ bóng */
-    /* Gợi ý trình duyệt hiển thị font mượt mà, sắc nét hơn */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
+        /* CSS mới cho .page-header h2 để chữ rõ hơn */
+        .page-header h2 {
+            margin: 0 0 10px 0;
+            font-size: 1.8em;
+            font-weight: 600;      /* Use semi-bold for clarity */
+            text-transform: uppercase;
+            color: white;
+            border-bottom: none;
+            text-shadow: none; /* Ensure no shadow */
+            -webkit-font-smoothing: antialiased; /* Font smoothing */
+            -moz-osx-font-smoothing: grayscale;  /* Font smoothing */
+        }
 
         .page-header p {
             margin: 0;
             font-size: 1em;
-            opacity: 0.9;
+            opacity: 0.9; /* Slightly transparent subtitle */
         }
 
-        
-        /* ----- Original Content Styles (Applied to main.content) ----- */
+
+        /* ----- Original Content Styles (Applied to main.content elements) ----- */
+         /* Áp dụng padding chung cho các thành phần nội dung chính */
+        main.content h1, main.content section {
+            padding-left: 30px;
+            padding-right: 30px;
+        }
+
         main.content h1, main.content h2, main.content h3, main.content h4 {
-            color: #0056b3; /* Dark Blue headings */
-            border-bottom: 1px solid #add8e6; /* Light Blue border */
+            color: #0056b3;
+            border-bottom: 1px solid #add8e6;
             padding-bottom: 5px;
-            margin-top: 30px; /* Khoảng cách phía trên các đề mục */
+            margin-top: 30px;
         }
-         main.content h2:first-of-type, main.content h1 {
-             margin-top: 0; /* Không cần margin cho đề mục đầu tiên */
-         }
 
-        main.content h1 {
-            text-align: center;
-            border-bottom: 2px solid #0056b3;
-        }
+         main.content h1 {
+             margin-top: 30px; /* Đảm bảo khoảng cách dưới header */
+             text-align: center;
+             border-bottom: 2px solid #0056b3;
+         }
+         /* Bỏ margin-top cho h2 đầu tiên trong mỗi section */
+          main.content section > h2:first-child,
+          main.content section > h3:first-child,
+          main.content section > h4:first-child {
+               margin-top: 0;
+          }
+
 
         main.content table {
-            width: 100%;
+            width: calc(100% - 60px); /* Width considering main padding */
+            margin-left: 30px; /* Align with padded content */
+            margin-right: 30px;
             border-collapse: collapse;
             margin-bottom: 20px;
-            background-color: #fff; /* White table background */
-            border: 1px solid #ddd; /* Light gray border */
-            font-size: 0.95em; /* Hơi nhỏ chữ trong bảng cho gọn */
-        }
-
-        main.content th, main.content td {
+            background-color: #fff;
             border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-            vertical-align: top; /* Căn nội dung lên trên trong ô */
-        }
+            font-size: 0.95em;
+         }
 
-        main.content th {
-            background-color: #e0efff; /* Lighter blue header */
-            color: #003366; /* Darker blue text for header */
-        }
+        main.content th, main.content td { border: 1px solid #ddd; padding: 8px; text-align: left; vertical-align: top; }
+        main.content th { background-color: #e0efff; color: #003366; }
 
-        main.content ul, main.content ol {
-            margin-left: 20px;
-            padding-left: 15px; /* Thêm padding để dấu đầu dòng không bị sát lề */
-        }
-         /* Chỉ áp dụng cho list trong nội dung, không phải nav */
-         main.content > section ul li, main.content > section ol li {
-            margin-bottom: 8px;
-        }
+        /* Lists inside sections should also respect padding */
+        main.content section ul, main.content section ol { margin-left: 20px; padding-left: 15px; }
+        main.content section ul li, main.content section ol li { margin-bottom: 8px; }
 
+        main.content strong { color: #004080; }
+        main.content code { background-color: #eef; padding: 2px 4px; border-radius: 3px; font-family: monospace; }
+        main.content .citation { font-size: 0.8em; color: #555; vertical-align: super; margin-left: 2px; background-color: transparent; padding: 0; border-radius: 0; font-family: sans-serif; }
 
-        main.content strong {
-            color: #004080; /* Slightly darker blue for emphasis */
-        }
-
-        main.content code { /* Style for citations or code-like text */
-            background-color: #eef;
-            padding: 2px 4px;
-            border-radius: 3px;
-            font-family: monospace;
-        }
-
-        main.content .citation { /* Style for citations */
-             font-size: 0.8em;
-             color: #555;
-             vertical-align: super;
-             margin-left: 2px;
-             /* Bỏ background để trông giống footnote hơn */
-             background-color: transparent;
-             padding: 0;
-             border-radius: 0;
-             font-family: sans-serif; /* Dùng font thường cho citation */
-        }
-
-        /* Target sections for navigation scrolling */
         section[id] {
-            padding-top: 20px; /* Tạo khoảng đệm phía trên khi nhảy tới id */
-            margin-top: -10px; /* Điều chỉnh để tiêu đề sát với top hơn */
+            padding-top: 20px;
+            margin-top: -10px; /* Adjust scroll target */
+             /* padding-left/right now applied to elements inside or section itself */
         }
 
-        /* Responsive: Ẩn nav và cho content full width trên màn hình nhỏ */
+
+        /* Responsive */
         @media (max-width: 768px) {
-            body { display: block; } /* Stack nav và content */
-            nav.sidebar {
-                position: static; /* Bỏ fixed */
-                width: 100%;
-                height: auto; /* Chiều cao tự động */
-                border-right: none;
-                border-bottom: 1px solid #b3e0ff;
-                 /* Có thể làm nav dạng ẩn/hiện bằng JavaScript */
-            }
-            main.content {
-                margin-left: 0;
-                width: 100%;
-                padding: 15px;
-            }
-        }
+            body { display: block; }
+            nav.sidebar { position: static; width: 100%; height: auto; border-right: none; border-bottom: 1px solid #b3e0ff; }
+            main.content { margin-left: 0; width: 100%; padding: 15px 0; } /* Adjust padding */
 
+            /* Header responsive adjustments */
+            .page-header {
+                padding: 20px 15px;
+                margin-bottom: 20px;
+                margin-left: 0; /* Remove negative margin */
+                margin-right: 0;
+                margin-top: -15px; /* Adjust top pull-up */
+                border-radius: 0;
+            }
+            .page-header h2 { font-size: 1.5em; }
+            .page-header p { font-size: 0.9em; }
+
+             /* Content padding on mobile */
+             main.content h1, main.content section { padding-left: 15px; padding-right: 15px; }
+             section[id] { padding-left: 15px; padding-right: 15px; }
+
+
+            main.content table { margin-left: 15px; margin-right: 15px; width: calc(100% - 30px); }
+             /* Reset table margin inside sections if needed */
+             section[id] table { margin-left: 0; margin-right: 0; width: 100%; }
+        }
     </style>
 </head>
 <body>
@@ -218,7 +179,8 @@
         <ul>
             <li><a href="#gioi-thieu">Giới thiệu & Tổng quan</a></li>
             <li><a href="#luu-y-chung">Lưu Ý Chung</a>
-                <ul> <li><a href="#an-toan-chuan-bi">An toàn & Chuẩn bị</a></li>
+                <ul>
+                    <li><a href="#an-toan-chuan-bi">An toàn & Chuẩn bị</a></li>
                     <li><a href="#chuoi-xung-thong-so">Chuỗi xung & Thông số</a></li>
                     <li><a href="#mat-phang-chup">Mặt phẳng chụp</a></li>
                     <li><a href="#toi-uu-hoa">Tối ưu hóa & Kỹ thuật mới</a></li>
@@ -252,13 +214,19 @@
     </nav>
 
     <main class="content">
+
+        <div class="page-header">
+            <p>TRANG THÔNG TIN HƯỚNG DẪN PROTOCOL CHỤP CỘNG HƯỞNG TỪ (MRI)</p>
+            <p>TỔNG HỢP KHUYẾN CÁO - ĐỊNH NGHĨA - THÔNG SỐ CHUẨN</p>
+             <p>BIÊN SOẠN BỞI NHÓM KTV 3 MIỀN</p>
+        </div>
         <h1>Tổng Hợp Các Protocol Chụp Cộng Hưởng Từ (MRI) Tiêu Chuẩn và Chuyên Sâu</h1>
 
         <section id="gioi-thieu">
              <h2>1. Giới thiệu</h2>
-             <p><strong>Vai trò không thể thiếu của MRI:</strong> Chụp cộng hưởng từ (MRI) là một kỹ thuật chẩn đoán hình ảnh không xâm lấn, không sử dụng bức xạ ion hóa, mang lại độ tương phản mô mềm vượt trội.<span class="citation">[1, 2, 3]</span> Điều này làm cho MRI trở thành công cụ vô giá trong việc chẩn đoán và theo dõi một loạt các tình trạng bệnh lý ở nhiều hệ cơ quan khác nhau, từ não bộ, cột sống đến bụng, chậu và hệ cơ xương khớp.<span class="citation">[4, 5, 6, 7]</span> MRI cho phép đánh giá chi tiết về giải phẫu, chức năng và các thay đổi bệnh lý trong cơ thể.<span class="citation">[1, 8]</span></p>
-             <p><strong>Sự cần thiết của việc Tiêu chuẩn hóa và Tối ưu hóa Protocol:</strong> Việc xây dựng và tuân thủ các protocol MRI được tiêu chuẩn hóa là cực kỳ quan trọng. Nó đảm bảo chất lượng chẩn đoán được tối đa hóa, mang lại sự nhất quán trong chất lượng hình ảnh giữa các lần chụp và các trung tâm khác nhau, đồng thời nâng cao hiệu quả hoạt động của khoa chẩn đoán hình ảnh.<span class="citation">[9, 10, 11]</span> Tuy nhiên, một thách thức phổ biến là sự thay đổi trong việc lựa chọn và thực hiện protocol tại thời điểm chụp.<span class="citation">[10]</span> Các protocol cần được điều chỉnh linh hoạt để phù hợp với từng loại máy móc, phần mềm cụ thể, yêu cầu lâm sàng, yếu tố bệnh nhân và cả sự ưu tiên của bác sĩ chẩn đoán hình ảnh.<span class="citation">[9, 10, 11]</span> Bên cạnh đó, việc tối ưu hóa protocol liên tục là cần thiết để cải thiện chất lượng hình ảnh, giảm thời gian chụp (tăng sự thoải mái cho bệnh nhân và hiệu suất làm việc), và giảm thiểu chi phí.<span class="citation">[1, 12, 13, 14, 15]</span> Mối quan hệ giữa việc tiêu chuẩn hóa để đảm bảo chất lượng đồng đều và việc tùy chỉnh để tối ưu hóa cho từng trường hợp cụ thể là một yếu tố cốt lõi trong thực hành MRI hiện đại. Một protocol "chuẩn" thường đóng vai trò là nền tảng, nhưng cần có sự giám sát và điều chỉnh thông minh từ các chuyên gia để đạt được kết quả chẩn đoán chính xác nhất, đặc biệt khi đối mặt với các tình huống phức tạp như bệnh nhân có kim loại cấy ghép hoặc khó hợp tác.<span class="citation">[16, 17, 18]</span></p>
-             <p><strong>Phạm vi và Mục đích của Báo cáo này:</strong> Báo cáo này nhằm mục đích cung cấp một cái nhìn tổng quan, tổng hợp và chi tiết về các protocol MRI tiêu chuẩn và các biến thể chuyên sâu phổ biến cho các vùng giải phẫu chính. Thông tin được tổng hợp từ các hướng dẫn thực hành, nghiên cứu khoa học và ví dụ từ các cơ sở y tế uy tín. Cần lưu ý rằng các protocol có thể thay đổi tùy thuộc vào từng cơ sở và thiết bị cụ thể; do đó, tài liệu này đóng vai trò như một nguồn tham khảo nền tảng, hỗ trợ các chuyên gia y tế trong việc lựa chọn và áp dụng protocol phù hợp.</p>
+             <p><strong>Vai trò không thể thiếu của MRI:</strong> Chụp cộng hưởng từ (MRI) là một kỹ thuật chẩn đoán hình ảnh không xâm lấn...</p>
+             <p><strong>Sự cần thiết của việc Tiêu chuẩn hóa...</strong></p>
+             <p><strong>Phạm vi và Mục đích của Báo cáo này:</strong>...</p>
          </section>
 
          <section id="luu-y-chung">
