--- a/mriprotocol/index.html
+++ b/mriprotocol/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tổng Hợp Protocol MRI Toàn Diện</title>
+<script src="https://cdn.counter.dev/script.js" data-id="86e74dda-26a8-41de-99d1-63d0e8fec60e" data-utcoffset="7"></script>
     <style>
         /* ----- Basic Layout Styles ----- */
         html {
