--- a/trangchu/index.html
+++ b/trangchu/index.html
@@ -134,7 +134,8 @@
 <body>
 
     <section class="hero-section">
-        <h1>Website tổng hợp thông tin về kỹ thuật hình ảnh y học</h1>
+        <h1>VNRAD.TECH</h1>
+        <h1>TRANG TỔNG HỢP THÔNG TIN VỀ KỸ THUẬT HÌNH ẢNH Y HỌC</h1>
         <div class="nav-buttons">
             <a href="URL_CHO_CT_PHOI">CT phổi liều thấp</a>
             <a href="URL_CHO_LIEU_XA">Tính toán liều bức xạ</a>
