--- a/mriprotocol/index.html
+++ b/mriprotocol/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tổng Hợp Protocol MRI Toàn Diện</title>
     <style>
+        /* ----- CSS Variables for Layout ----- */
+        :root {
+            --sidebar-width: 220px; /* <<== THAY ĐỔI CHIỀU RỘNG SIDEBAR Ở ĐÂY */
+            --content-gap: 30px;   /* Khoảng cách giữa sidebar và nội dung */
+        }
+
         /* ----- Basic Layout Styles ----- */
         html {
             scroll-behavior: smooth;
@@ -20,36 +26,81 @@
         }
 
         nav.sidebar {
-            width: 220px;
+            width:270px; /* Use variable */
             background-color: #e6f7ff;
             border-right: 1px solid #b3e0ff;
-            padding: 20px 15px;
+            padding: 0 15px 20px 15px;
             height: 100vh;
             position: fixed;
             top: 0;
             left: 0;
             overflow-y: auto;
             z-index: 1000;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
         }
+
+        /* ----- Sidebar Logo Styles ----- */
+        img.sidebar-logo {
+            display: block;
+            max-width: 85%;
+            height: auto;
+            margin: 0 auto 20px auto;
+            padding-top: 15px;
+            flex-shrink: 0;
+        }
+
 
         nav.sidebar h3 {
             margin-top: 0;
+            padding-top: 0;
             color: #0056b3;
             border-bottom: 1px solid #add8e6;
             padding-bottom: 10px;
+            flex-shrink: 0;
+            text-align: center;
         }
 
-        nav.sidebar ul { list-style: none; padding: 0; margin: 0; }
+        nav.sidebar ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            flex-grow: 1;
+            overflow-y: auto;
+            margin-top: 10px;
+        }
         nav.sidebar ul li { margin-bottom: 5px; }
         nav.sidebar ul li a { text-decoration: none; color: #0056b3; display: block; padding: 8px 10px; border-radius: 4px; transition: background-color 0.2s ease; }
         nav.sidebar ul li a:hover, nav.sidebar ul li a.active { background-color: #cceaff; font-weight: bold; }
         nav.sidebar ul ul { margin-left: 15px; margin-top: 5px; border-left: 2px solid #add8e6; padding-left: 10px; }
         nav.sidebar ul ul li a { font-size: 0.9em; padding: 5px 10px; }
 
+        /* ----- Home Button Styles ----- */
+        nav.sidebar .home-button {
+            display: block;
+            background-color: #0056b3;
+            color: white;
+            text-align: center;
+            padding: 10px 15px;
+            border-radius: 5px;
+            text-decoration: none;
+            margin-top: 25px;
+            font-weight: bold;
+            transition: background-color 0.2s ease;
+            flex-shrink: 0;
+        }
+
+        nav.sidebar .home-button:hover {
+            background-color: #004a9e;
+            color: white;
+        }
+
         main.content {
-            margin-left: 250px; /* Should be > sidebar width + padding */
-            padding: 20px 0;    /* Vertical padding only */
-            width: calc(100% - 250px);
+            /* Adjust margin and width using variables */
+            margin-left: calc(var(--sidebar-width) + var(--content-gap));
+            padding: 20px 0;
+            width: calc(100% - var(--sidebar-width) - var(--content-gap));
             box-sizing: border-box;
         }
 
@@ -60,22 +111,22 @@
             padding: 30px 30px;
             text-align: center;
             margin-bottom: 30px;
-            margin-left: 0;
+            margin-left: 0; /* Reset margin */
             margin-right: 0;
-            margin-top: -20px; /* Pull up relative to main's top padding */
+            margin-top: -20px;
             opacity: 1;
         }
 
         .page-header h2 {
             margin: 0 0 10px 0;
-            font-size: 1.8em; /* Reverted size, adjust if needed */
+            font-size: 1.8em;
             font-weight: 600;
             font-family: Arial, Helvetica, sans-serif;
             text-transform: uppercase;
-            color: white !important; /* Ensure white */
-            opacity: 1 !important; /* Ensure not transparent */
+            color: white !important;
+            opacity: 1 !important;
             border-bottom: none;
-            text-shadow: none !important; /* Ensure no shadow */
+            text-shadow: none !important;
             letter-spacing: normal;
             -webkit-font-smoothing: auto;
             -moz-osx-font-smoothing: auto;
@@ -84,8 +135,8 @@
         .page-header p {
             margin: 0;
             font-size: 1em;
-            opacity: 1; /* Full opacity */
-            color: white; /* Ensure white */
+            opacity: 1;
+            color: white;
         }
 
         /* ----- Footer Styles ----- */
@@ -99,7 +150,7 @@
             clear: both;
             font-size: 0.9em;
             box-sizing: border-box;
-            width: calc(100% - 60px); /* Width considering main content padding */
+            width: calc(100% - 60px); /* Adjust width based on content padding */
             margin-left: 30px;
             margin-right: 30px;
         }
@@ -121,20 +172,24 @@
             margin-top: 30px;
         }
 
-        main.content h1 {
-             margin-top: 0; /* H1 is first after header */
+         main.content h1 {
+             margin-top: 0;
              text-align: center;
              border-bottom: 2px solid #0056b3;
          }
-         main.content section > h2:first-child,
-         main.content section > h3:first-child,
-         main.content section > h4:first-child {
-               margin-top: 0; /* Reset top margin for first heading in section */
+          main.content section > h2:first-child,
+          main.content section > h3:first-child,
+          main.content section > h4:first-child {
+               margin-top: 0;
           }
 
+        /* Apply text justification to paragraphs within sections */
+        main.content section p {
+            text-align: justify;
+        }
 
         main.content table {
-            width: 100%; /* Table width relative to parent section */
+            width: 100%;
             border-collapse: collapse;
             margin-bottom: 20px;
             background-color: #fff;
@@ -146,33 +201,30 @@
         main.content th { background-color: #e0efff; color: #003366; }
 
         main.content section ul, main.content section ol { margin-left: 20px; padding-left: 15px; }
+        main.content section ul ul, main.content section ol ol,
+        main.content section ul ol, main.content section ol ul { margin-top: 5px; margin-bottom: 5px; }
         main.content section ul li, main.content section ol li { margin-bottom: 8px; }
+
 
         main.content strong { color: #004080; }
         main.content code { background-color: #eef; padding: 2px 4px; border-radius: 3px; font-family: monospace; }
-        /* Ensure citations from PDF are styled */
-        main.content .citation {
-             font-size: 0.8em;
-             color: #555;
-             vertical-align: super;
-             margin-left: 2px;
-             background-color: transparent;
-             padding: 0;
-             border-radius: 0;
-             font-family: sans-serif;
-        }
+        main.content .citation { font-size: 0.8em; color: #555; vertical-align: super; margin-left: 2px; background-color: transparent; padding: 0; border-radius: 0; font-family: sans-serif; white-space: nowrap; }
 
         section[id] {
             padding-top: 20px;
-            margin-top: -10px; /* Adjust scroll target */
+            margin-top: -10px;
         }
 
 
         /* ----- Responsive ----- */
         @media (max-width: 768px) {
             body { display: block; }
-            nav.sidebar { position: static; width: 100%; height: auto; border-right: none; border-bottom: 1px solid #b3e0ff; box-sizing: border-box; }
-            main.content { margin-left: 0; width: 100%; padding: 15px 0; }
+            nav.sidebar { position: static; width: 100%; height: auto; border-right: none; border-bottom: 1px solid #b3e0ff; box-sizing: border-box; padding-bottom: 20px; }
+            main.content {
+                 margin-left: 0; /* Reset margin */
+                 width: 100%;    /* Full width */
+                 padding: 15px 0;
+            }
 
              main.content h1, main.content section { padding-left: 15px; padding-right: 15px; }
              section[id] { padding-left: 15px; padding-right: 15px; }
@@ -184,13 +236,18 @@
             footer.page-footer { padding: 20px 15px; border-radius: 0; margin-top: 30px; font-size: 0.85em; margin-left: 15px; margin-right: 15px; width: calc(100% - 30px); }
              footer.page-footer .disclaimer { font-size: 0.75em; }
 
-            main.content table { width: 100%; margin-left: 0; margin-right: 0; } /* Table full width within section padding */
+            main.content table { width: 100%; margin-left: 0; margin-right: 0; }
+            img.sidebar-logo { max-width: 120px; }
+            nav.sidebar .home-button { margin: 15px; }
+             /* Reset paragraph text alignment on mobile if desired */
+            /* main.content section p { text-align: left; } */
         }
     </style>
 </head>
 <body>
 
     <nav class="sidebar">
+        <img src="https://i.postimg.cc/RF7KkJHP/d77353b94f1e9f40c60f.png" alt="Logo Group KTV 3 Miền" class="sidebar-logo">
         <h3>Danh Mục Protocols</h3>
         <ul>
             <li><a href="#gioi-thieu">Giới thiệu & Tổng quan</a></li>
@@ -227,9 +284,10 @@
             <li><a href="#tai-lieu-hoa">Tài liệu hóa & Triển khai</a></li>
             <li><a href="#ket-luan">Kết luận & Xu hướng</a></li>
         </ul>
-    </nav>
 
-    <main class="content">
+        <a href="#" class="home-button">Trở về Trang Chủ</a>
+
+    </nav> <main class="content">
 
         <div class="page-header">
             <h2>TRANG THÔNG TIN HƯỚNG DẪN PROTOCOL CHỤP CỘNG HƯỞNG TỪ (MRI)</h2>
@@ -244,7 +302,7 @@
             <p><strong>Phạm vi và Mục đích của Báo cáo này:</strong> Báo cáo này nhằm mục đích cung cấp một cái nhìn tổng quan, tổng hợp và chi tiết về các protocol MRI tiêu chuẩn và các biến thể chuyên sâu phổ biến cho các vùng giải phẫu chính<span class="citation">[12]</span>. Thông tin được tổng hợp từ các hướng dẫn thực hành, nghiên cứu khoa học và ví dụ từ các cơ sở y tế uy tín<span class="citation">[13]</span>. Cần lưu ý rằng các protocol có thể thay đổi tùy thuộc vào từng cơ sở và thiết bị cụ thể<span class="citation">[14]</span>; do đó, tài liệu này đóng vai trò như một nguồn tham khảo nền tảng, hỗ trợ các chuyên gia y tế trong việc lựa chọn và áp dụng protocol phù hợp<span class="citation">[15]</span>.</p>
         </section>
 
-        <section id="luu-y-chung">
+         <section id="luu-y-chung">
              <h2>2. Các Lưu Ý Chung Khi Thực Hiện Protocol MRI</h2>
              <section id="an-toan-chuan-bi">
                  <h3>2.1. An Toàn, Chuẩn Bị và Sàng Lọc Bệnh Nhân:</h3>
@@ -400,7 +458,7 @@
                             <li><em>Ông tai trong/Góc cầu tiểu não (IAC/CPA):</em> Lát cắt mỏng, độ phân giải cao T2 (ví dụ: CISS, FIESTA), T1 lát mỏng sau tiêm<span class="citation">[127, 128]</span>.</li>
                          </ul>
                      </li>
-                     <li><strong>Chụp Mạch Máu Não (MRA) & Tĩnh Mạch Não (MRV):</strong> Các protocol khảo sát đa giác Willis, động mạch cảnh/đốt sống, các xoang tĩnh mạch<span class="citation">[128]</span>. Thường sử dụng kỹ thuật TOF (không tiêm thuốc) hoặc CE-MRA (có tiêm thuốc)<span class="citation">[129]</span>.</li>
+                     <li><strong>MRA/MRV:</strong> Các protocol khảo sát đa giác Willis, động mạch cảnh/đốt sống, các xoang tĩnh mạch<span class="citation">[128]</span>. Thường sử dụng kỹ thuật TOF (không tiêm thuốc) hoặc CE-MRA (có tiêm thuốc)<span class="citation">[129]</span>.</li>
                  </ul>
              </section>
              <section id="cot-song">
@@ -594,11 +652,11 @@
                          <ul>
                              <li><em>Protocol Tiêu Chuẩn (Không tiêm thuốc nội khớp):</em> Axial PD/T2 FS, Oblique Coronal T1/PD, Oblique Coronal T2 FS/PD FS, Oblique Sagittal T2 FS/PD FS<span class="citation">[219]</span>. (Dựa trên <span class="citation">[41]</span>)<span class="citation">[220]</span>. ACR yêu cầu tối thiểu T1/PD (dịch tối) và T2/PD FS (dịch sáng) trên mặt phẳng Oblique Coronal, cùng với các chuỗi xung trên mặt phẳng Axial và Oblique Sagittal<span class="citation">[220]</span>.</li>
                              <li><em>Mặt phẳng:</em> Axial, Oblique Coronal, Oblique Sagittal<span class="citation">[220]</span>.</li>
-                             <li><em>Độ dày lát cắt:</em> ≤4mm, lý tưởng ≤3.5mm<span class="citation">[221]</span>.</li>
+                             <li><em>Độ dày lát cắt:</em> ≤4mm (≤3.5mm)<span class="citation">[221]</span>.</li>
                              <li><em>FOV:</em> ≤16cm<span class="citation">[221]</span>.</li>
-                             <li><em>Thuốc cản quang:</em> Thường không sử dụng, trừ khi nghi ngờ u/nhiễm trùng/viêm hoặc chỉ định chụp MR Arthrography<span class="citation">[221]</span>.</li>
+                             <li><em>Thuốc cản quang:</em> Ít dùng, trừ u/nhiễm trùng/viêm/Arthrography<span class="citation">[221]</span>.</li>
                              <li><em>MR Arthrography:</em> Tiêm thuốc cản quang Gadolinium pha loãng trực tiếp vào khoang khớp<span class="citation">[222]</span>. Kỹ thuật này giúp tăng khả năng phát hiện rách sụn viền, rách bán phần chóp xoay, dị vật nội khớp<span class="citation">[223]</span>. Thường bổ sung các chuỗi xung T1 xóa mỡ trên cả ba mặt phẳng sau khi tiêm thuốc<span class="citation">[224, 225]</span>.</li>
-                             <li><em>Tăng tốc:</em> Các protocol 5 phút sử dụng PI/DLR đã được chứng minh là khả thi và cho hiệu suất chẩn đoán tương đương<span class="citation">[225, 226]</span>.</li>
+                             <li><em>Tăng tốc:</em> 5 phút PI/DLR<span class="citation">[225, 226]</span>.</li>
                          </ul>
                      </li>
                       <li><strong>Bảng 5.1: Tóm Tắt Protocol MRI Vai Tiêu Chuẩn (Không Tiêm Nội Khớp)</strong><span class="citation">[227, 228, 229]</span>
@@ -634,10 +692,10 @@
                  <ul>
                      <li><strong>Háng:</strong>
                          <ul>
-                             <li><em>Protocol Tiêu Chuẩn:</em> Axial T1 FOV lớn (bao phủ khung chậu), Axial T1/PD FOV nhỏ, Axial T2 FS/STIR FOV nhỏ, Coronal T1/PD FOV nhỏ, Coronal T2 FS/STIR FOV nhỏ, Sagittal T2 FS/STIR FOV nhỏ (tùy chọn)<span class="citation">[234]</span>. (Tổng hợp từ )<span class="citation">[235]</span>.</li>
-                             <li><em>Mặt phẳng:</em> Axial, Coronal là tiêu chuẩn. Sagittal tùy chọn<span class="citation">[235]</span>.</li>
+                             <li><em>Protocol Tiêu Chuẩn:</em> Axial T1 LFOV, Axial T1/PD SFOV, Axial T2 FS/STIR SFOV, Cor T1/PD SFOV, Cor T2 FS/STIR SFOV, +/- Sag T2 FS/STIR SFOV<span class="citation">[234]</span>. (Tổng hợp từ )<span class="citation">[235]</span>.</li>
+                             <li><em>Mặt phẳng:</em> Axial, Coronal. +/- Sagittal<span class="citation">[235]</span>.</li>
                              <li><em>Độ dày lát cắt:</em> 3-4mm<span class="citation">[236]</span>.</li>
-                             <li><em>Thuốc cản quang:</em> Không dùng trừ khi nghi ngờ u/nhiễm trùng/viêm hoặc chụp MR Arthrography<span class="citation">[236]</span>.</li>
+                             <li><em>Thuốc cản quang:</em> Ít dùng, trừ u/nhiễm trùng/viêm/Arthrography<span class="citation">[236]</span>.</li>
                              <li><em>MR Arthrography:</em> Chỉ định cho rách sụn viền, hội chứng chạm khớp háng (FAI), dị vật nội khớp<span class="citation">[237]</span>. Bổ sung các chuỗi xung T1 xóa mỡ sau tiêm thuốc nội khớp<span class="citation">[238]</span>.</li>
                          </ul>
                      </li>
@@ -646,8 +704,8 @@
                               <thead> <tr> <th>Chuỗi Xung</th> <th>Mặt phẳng điển hình</th> <th>Độ dày lát cắt (mm)</th> <th>Sử dụng Thuốc Cản Quang</th> <th>Mục đích chính</th> </tr> </thead>
                              <tbody>
                                  <tr> <td>T1W FOV Lớn</td> <td>Axial</td> <td>5-7</td> <td>Không</td> <td>Đánh giá tổng quan khung chậu, hạch</td> </tr>
-                                 <tr> <td>T1W / PDW FOV Nhỏ</td> <td>Axial, Coronal</td> <td>3-4</td> <td>Không</td> <td>Giải phẫu chi tiết khớp háng, tủy xương</td> </tr>
-                                 <tr> <td>T2W FS / STIR FOV Nhỏ</td> <td>Axial, Coronal</td> <td>3-4</td> <td>Không</td> <td>Phù nề (xương, mô mềm), tràn dịch khớp, viêm</td> </tr>
+                                 <tr> <td>T1W / PDW FOV Nhỏ</td> <td>Axial, Coronal</td> <td>3-4</td> <td>Không</td> <td>Giải phẫu khớp háng, tủy xương</td> </tr>
+                                 <tr> <td>T2W FS / STIR FOV Nhỏ</td> <td>Axial, Coronal</td> <td>3-4</td> <td>Không</td> <td>Phù nề, tràn dịch, viêm</td> </tr>
                                  <tr> <td>T2W FS / STIR FOV Nhỏ</td> <td>Sagittal (tùy chọn)</td> <td>3-4</td> <td>Không</td> <td>Đánh giá bổ sung (ví dụ: gân cơ)</td> </tr>
                              </tbody>
                          </table>
@@ -728,7 +786,7 @@
 
             sections.forEach(section => {
                 const sectionTop = section.getBoundingClientRect().top;
-                if (sectionTop <= 100 && sectionTop > -section.offsetHeight + 100) {
+                if (sectionTop <= 150 && sectionTop > -section.offsetHeight + 150) {
                     const distance = Math.abs(sectionTop);
                     if (distance < minDistance) {
                         minDistance = distance;
@@ -737,10 +795,12 @@
                 }
             });
 
-             if (!currentSectionId && sections.length > 0) {
+             if (!currentSectionId && sections.length > 0 && window.scrollY > 100) {
                  let index = sections.length;
-                 while(--index && window.scrollY + 80 < sections[index].offsetTop) {}
+                 while(--index >= 0 && window.scrollY + 150 < sections[index].offsetTop) {}
                  currentSectionId = sections[index] ? sections[index].id : null;
+             } else if (!currentSectionId && sections.length > 0) {
+                currentSectionId = sections[0].id;
              }
 
 
@@ -758,8 +818,8 @@
                  if (activeLink) {
                      activeLink.classList.add('active');
                      const parentUl = activeLink.closest('ul');
-                     const parentLi = parentUl ? parentUl.closest('li') : null;
-                     if (parentLi) {
+                     if (parentUl && parentUl.parentElement.tagName === 'LI') {
+                         const parentLi = parentUl.parentElement;
                          const parentAnchor = parentLi.querySelector(':scope > a');
                          if (parentAnchor && parentAnchor !== activeLink) {
                              parentAnchor.classList.add('active');
@@ -775,7 +835,9 @@
             scrollTimeout = setTimeout(changeNav, 50);
         });
 
-        changeNav(); // Initial call
+        window.addEventListener('load', () => {
+             setTimeout(changeNav, 100);
+        });
     </script>
 
 </body>
