--- a/trangchu/index.html
+++ b/trangchu/index.html
@@ -137,9 +137,9 @@
         <h1>VNRAD.TECH</h1>
         <h1>TRANG TỔNG HỢP THÔNG TIN VỀ KỸ THUẬT HÌNH ẢNH Y HỌC</h1>
         <div class="nav-buttons">
-            <a href="URL_CHO_CT_PHOI">CT phổi liều thấp</a>
-            <a href="URL_CHO_LIEU_XA">Tính toán liều bức xạ</a>
-            <a href="URL_CHO_MRI_PROTOCOL">MRI Protocol</a>
+            <a href="https://vnrad.tech/lunglowdose/">CT phổi liều thấp</a>
+            <a href="https://vnrad.tech/dosecal/">Tính toán liều bức xạ</a>
+            <a href="https://vnrad.tech/mriprotocol">MRI Protocol</a>
             <a href="URL_CHO_THUOC_TUONG_PHAN">Thuốc tương phản</a>
 
         </div>
