--- a/trangchu/index.html
+++ b/trangchu/index.html
@@ -154,9 +154,9 @@
         <p class="tagline">VietNam RAdiology TECHnologist</p> <p class="subtitle">Trang thông tin tổng hợp về kỹ thuật hình ảnh y học</p>
 
         <div class="nav-buttons">
-            <a href="https://vnrad.tech/lunglowdose/I">CT phổi liều thấp</a>
+              <a href="https://vnrad.tech/mriprotocol/">MRI Protocol</a>
+            <a href="https://vnrad.tech/lunglowdose/">CT phổi liều thấp</a>
             <a href="https://vnrad.tech/dosecal/">Tính toán liều bức xạ</a>
-            <a href="https://vnrad.tech/mriprotocol/">MRI Protocol</a>
             <a href="URL_CHO_THUOC_TUONG_PHAN">Thuốc tương phản</a>
         </div>
     </section>
