--- a/mriprotocol/index.html
+++ b/mriprotocol/index.html
@@ -396,7 +396,7 @@
                      <li><strong>Kỹ Thuật Giảm Thời Gian Chụp:</strong>
                          <ul>
                              <li><em>Hình ảnh song song (Parallel Imaging - PI):</em> Sử dụng thông tin độ nhạy của các kênh coil thu tín hiệu để lấy mẫu thưa trong k-space, giảm thời gian chụp. Các kỹ thuật phổ biến bao gồm GRAPPA, SENSE, ARC. Hệ số tăng tốc thường dùng là 2-4 lần<span class="citation">[83]</span>.</li>
-                             <li><em>Cảm biến nén (Compressed Sensing - CS):</em> Kỹ thuật tiên tiến cho phép tăng tốc cao hơn (ví dụ: 6 lần hoặc hơn) bằng cách khai thác tính thưa của dữ liệu hình ảnh. Thường được áp dụng cho các chuỗi xung 3D<span class="citation">[84]</span>.</li>
+                             <li><em>Compressed Sensing - CS:</em> Kỹ thuật tiên tiến cho phép tăng tốc cao hơn (ví dụ: 6 lần hoặc hơn) bằng cách khai thác tính thưa của dữ liệu hình ảnh. Thường được áp dụng cho các chuỗi xung 3D<span class="citation">[84]</span>.</li>
                              <li><em>Đa lát cắt đồng thời (Simultaneous Multi-Slice - SMS) / Multiband:</em> Kích thích và thu tín hiệu của nhiều lát cắt cùng lúc, giảm đáng kể thời gian chụp cho các chuỗi xung 2D như EPI (DWI, fMRI) và TSE<span class="citation">[85]</span>.</li>
                              <li><em>Giảm NEX/Số trung bình:</em> Giảm thời gian chụp nhưng làm giảm SNR<span class="citation">[86]</span>.</li>
                              <li><em>Tối ưu hóa quỹ đạo/lấy mẫu k-space.</em></li>
