--- a/trangchu/index.html
+++ b/trangchu/index.html
@@ -158,7 +158,7 @@
               <a href="https://vnrad.tech/mriprotocol/">MRI Protocol</a>
             <a href="https://vnrad.tech/lunglowdose/">CT phổi liều thấp</a>
             <a href="https://vnrad.tech/dosecal/">Tính toán liều bức xạ</a>
-            <a href="URL_CHO_THUOC_TUONG_PHAN">Thuốc tương phản</a>
+            <a href="https://vnrad.tech/contrast/">Thuốc tương phản</a>
         </div>
     </section>
 
